# Safety_Agent

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml  requirements.txt  test_chat_text.txt  test_text.py
.cache/huggingface/datasets/json/default-edc97c2f73f7042a/0.0.0/f4e89e8750d5d5ffbef2c078bf0ddfedef29dc2faff52a6255cf513c05eb1092/: cache-76483b9f006c81ea.arrow  cache-ac4265bfa8372571_00000_of_00008.arrow  cache-ac4265bfa8372571_00001_of_00008.arrow  cache-ac4265bfa8372571_00002_of_00008.arrow  cache-ac4265bfa8372571_00003_of_00008.arrow  cache-ac4265bfa8372571_00004_of_00008.arrow  cache-ac4265bfa8372571_00005_of_00008.arrow  cache-ac4265bfa8372571_00006_of_00008.arrow  (+12 more)
configs/llamafactory/: dataset_info.json  qwen2vl_lora_export.yaml  qwen3vl_lora.yaml  qwen3vl_lora_local.yaml
prompts/: system_role_prompt.txt
scripts/: add_laws_to_db.py  clean_sft_dataset.py  debug_retrieval.py  export_lora_model.sh  prepare_qwen3vl_sft_data.py  run_agent_demo.py  run_agent_webui.py  run_data_preprocess.py  run_ingestion_api.py  start_all_services.sh  start_lf_api.sh  start_lf_webui.sh  test_legal_retrieval.py  train_qwen3vl_lora.sh  train_qwen3vl_lora_local.sh
src/agent/: __init__.py  workflow.py
src/data_processor/: __init__.py  extractor.py
src/evaluation/: __init__.py  evaluate_qwen3vl.py
src/retriever/: __init__.py  clip_engine.py  clip_retriever.py
web-service-app/: README.md  package.json
web-service-app/public/: app.js  index.html
web-service-app/src/: server.ts
web-service-app/src/routes/: index.ts
web-service-app/src/types/: index.ts
